rsvp application のコアを作成

--- a/rsvpyes/appsettings.json
+++ b/rsvpyes/appsettings.json
@@ -1,4 +1,8 @@
-﻿{
+{
+  "ConnectionStrings": {
+    "RsvpDatabase": "Data Source=App_Data\\rsvp.db",
+    "rsvpyesContext": "Server=(localdb)\\mssqllocaldb;Database=rsvpyesContext-ca0a3a0d-0317-4192-af72-5ffc4da85d66;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
