メール送信の途中まで実装

--- a/rsvpyes/appsettings.json
+++ b/rsvpyes/appsettings.json
@@ -1,7 +1,13 @@
 {
+  "Mail": {
+    "SmtpHost": "smtp.example.com",
+    "SmtpPort": 25,
+    "SmtpUser": "test@example.com",
+    "SmtpPassword": "password",
+    "SenderSignature": "=======================================\r\nRSVP Yes! <test@example.com>"
+  },
   "ConnectionStrings": {
-    "RsvpDatabase": "Data Source=App_Data\\rsvp.db",
-    "rsvpyesContext": "Server=(localdb)\\mssqllocaldb;Database=rsvpyesContext-ca0a3a0d-0317-4192-af72-5ffc4da85d66;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RsvpDatabase": "Data Source=App_Data\\rsvp.db"
   },
   "Logging": {
     "IncludeScopes": false,
