--- a/tests/RsvpYes.Domain.Tests/RsvpYes.Domain.Tests.csproj
+++ b/tests/RsvpYes.Domain.Tests/RsvpYes.Domain.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\RsvpYes.Domain\RsvpYes.Domain.csproj" />
+    <ProjectReference Include="..\..\src\RsvpYes.Domain\RsvpYes.Domain.csproj" />
   </ItemGroup>
 
 </Project>
