--- a/src/RsvpYes.Web.Api/Properties/launchSettings.json
+++ b/src/RsvpYes.Web.Api/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:51254",
       "sslPort": 44374
@@ -15,10 +16,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RsvpYes.Web": {
+    "RsvpYes.Web.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:44374;http://localhost:51254",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
