--- a/src/RsvpYes.Web/appsettings.json
+++ b/src/RsvpYes.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RsvpYesConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=rsvpyes;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
