--- a/src/RsvpYes.Web/RsvpYes.Web.csproj
+++ b/src/RsvpYes.Web/RsvpYes.Web.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.5.3" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.3" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
@@ -17,7 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\RsvpYes.Application\RsvpYes.Application.csproj" />
     <ProjectReference Include="..\RsvpYes.Data\RsvpYes.Data.csproj" />
-    <ProjectReference Include="..\RsvpYes.Query\RsvpYes.Query.csproj" />
   </ItemGroup>
 
 </Project>
