--- a/src/RsvpYes.Web/appsettings.json
+++ b/src/RsvpYes.Web/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "RsvpYesConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=rsvpyes;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "Jwt": {
+    "Issuer": "docmsapi",
+    "Audience": "docmsapi",
+    "Key": "docmsapi"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
